--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <title>FindChat</title>
   </head>
   <body>
