--- a/htdocs/c47edb6757fa.htm
+++ b/htdocs/c47edb6757fa.htm
@@ -1,1 +1,35 @@
-d68301f83a21
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="theme-color" content="#000">
+    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>findchat</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111372474-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111372474-1');
+    </script>
+
+  </head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root">
+      <img src='/svg/logo_color.svg' style='height: 10vh; margin-left: calc(50vw - 5vh); margin-top: 40vh' />
+    </div>
+    <link rel="stylesheet" href="/css/ReactCrop.css">
+    <link rel="stylesheet" href="/css/build/static/css/main.css">
+    <script src="/css/build/static/js/main.js"></script>
+  </body>
+</html>
