--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="theme-color" content="#000">
-    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
+    <meta name="theme-color" content="#fff">
+    <link rel="manifest" href="/js/manifest.json">
+    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
